Added new hobby

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<li>Badminton</li>
 			<li>watching movies</li>
 			<li>Driving</li>
+			<li>Writing</li>
 		</ul>
 
 		<a href="Assignment2/assignment2.html">Assignment 2</a>
